syntax = "proto3";

import "google/protobuf/timestamp.proto";

package food;

option go_package = "proto/foodspb";

message Ingredients {
    string name = 1;
    int64 IDfood = 2;
    bool status = 3;
}

message IngredientsOnlyName {
    string name = 1;
}

message CreatedFoodRequest {
    string name = 1; 
    float price = 2;
    repeated string ingredients = 3;
}

message Food {
    int64 id = 1;
    string name = 2;
    float price = 3;
    repeated string ingredients = 4;
    google.protobuf.Timestamp createdAt = 5;
    google.protobuf.Timestamp updateAt = 6;
    bool status = 7;
}

message ResFood {
    int64 id = 1;
    string name = 2;
    float price = 3;
    Ingre ingredi = 4;
    google.protobuf.Timestamp createdAt = 5;
    google.protobuf.Timestamp updateAt = 6;
    bool status = 7;
}

message Ingre {
    repeated string id = 1;
    repeated string name = 2; 
}

message FoodUpdateRequest {
    int64 id = 1;
    string name = 2;
    float price = 3;
}

message FoodWithoutIngredients {
    int64 id = 1;
    string name = 2;
    float price = 3;
    google.protobuf.Timestamp createdAt = 4;
    google.protobuf.Timestamp updateAt = 5;
    bool status = 6;
}

message FoodRequest {
    int64 id = 1;
}

message GetFoodsRequest {
    int64 page = 1;
}

message FoodResponse { Food food = 1; }

message FoodGetResponse { ResFood food = 1; }

message FoodsResponse {
    repeated ResFood foods = 1;
}

message MessageResponse {
    bool success = 1;
}

service FoodService {
    rpc CreatedFood(CreatedFoodRequest) returns (FoodResponse);
    rpc GetFood(FoodRequest) returns (FoodGetResponse);
    rpc GetFoods(GetFoodsRequest) returns (FoodsResponse);
    rpc UpdateFood(FoodUpdateRequest) returns (MessageResponse);
    rpc DeleteFood(FoodRequest) returns (MessageResponse);
} 